--- a/themes/yeldirium/layout/archive.ejs
+++ b/themes/yeldirium/layout/archive.ejs
@@ -1,4 +1,4 @@
-<main id="main" role="main" class="archive">
+<main class="main main--archive" role="main">
   <%
     const categoriesList = list_categories({ show_count: false });
     const tagsList = list_tags({ show_count: false });
