--- a/themes/yeldirium/layout/category.ejs
+++ b/themes/yeldirium/layout/category.ejs
@@ -1,4 +1,4 @@
-<main id="main" role="main" class="category">
+<main class="main main--category" role="main">
   <div id="category">
     <h1><%= page.category %></h1>
     <% page.posts.each(article => { %>
