--- a/themes/yeldirium/layout/index.ejs
+++ b/themes/yeldirium/layout/index.ejs
@@ -1,4 +1,4 @@
-<main id="main" role="main" class="index">
+<main class="main main--index" role="main">
   <%- partial('_partial/recentPosts')%>
 
   <div id="paginator">
