--- a/themes/yeldirium/layout/tag.ejs
+++ b/themes/yeldirium/layout/tag.ejs
@@ -1,4 +1,4 @@
-<main id="main" role="main" class="tag">
+<main class="main main--tag" role="main">
   <div id="tag">
     <h1><%= page.tag %></h1>
     <% page.posts.each(article => { %>
