--- a/themes/yeldirium/source-raw/scss/index.scss
+++ b/themes/yeldirium/source-raw/scss/index.scss
@@ -1,1 +1,7 @@
 @import './insight';
+@import './shared/hamburger';
+@import './shared/fonts';
+
+@import './mobile';
+@import './tablet';
+@import './desktop';
