--- a/themes/yeldirium/layout/_partial/header/profile.ejs
+++ b/themes/yeldirium/layout/_partial/header/profile.ejs
@@ -1,9 +1,16 @@
 <% var profile = theme.profile; %>
-<div class="profile-block text-center">
-  <a id="avatar" href="<%= url_for(config.root) %>">
-    <img class="img-circle img-rotate" src="<%= ( profile.gravatar ? gravatar(profile.gravatar, 128) : url_for(profile.avatar)) %>" width="200" height="200">
+<div class="profile">
+  <a class="profile__avatar" href="<%= url_for(config.root) %>">
+    <img
+      class="profile__avatar__image"
+      src="<%= ( profile.gravatar ? gravatar(profile.gravatar, 128) : url_for(profile.avatar)) %>"
+      width="20"
+      height="20"
+    />
   </a>
-  <h2 id="name" class="hidden-xs hidden-sm"><%= profile.author %></h2>
-  <h3 id="title" class="hidden-xs hidden-sm hidden-md"><%= profile.author_title %></h3>
-  <small id="location" class="text-muted hidden-xs hidden-sm"><i class="fas fa-map-marker-alt"></i> <%= profile.location %></small>
+  <h2 class="profile__name"><%= profile.author %></h2>
+  <h3 class="profile__title"><%= profile.author_title %></h3>
+  <small class="profile__location"
+    ><i class="fas fa-map-marker-alt"></i> <%= profile.location %></small
+  >
 </div>
