--- a/themes/yeldirium/layout/_partial/navigation/toggleButton.ejs
+++ b/themes/yeldirium/layout/_partial/navigation/toggleButton.ejs
@@ -1,6 +1,11 @@
-<button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false">
-  <span class="sr-only"><%= __("navigation.toggle") %></span>
-  <span class="icon-bar"></span>
-  <span class="icon-bar"></span>
-  <span class="icon-bar"></span>
+<button
+  id="navigation-toggle-button"
+  class="hamburger hamburger--minus"
+  type="button"
+  aria-label="<%= __('navigation.toggle') %>"
+  aria-controls="navigation"
+>
+  <span class="hamburger-box">
+    <span class="hamburger-inner"></span>
+  </span>
 </button>
