--- a/themes/yeldirium/layout/_partial/search/searchBar.ejs
+++ b/themes/yeldirium/layout/_partial/search/searchBar.ejs
@@ -1,13 +1,15 @@
 <%- partial('_partial/search/insight/template') %>
 <%- partial('_partial/search/insight/config') %>
 
-<div class="search" id="search-form-wrap">
-    <form class="search-form sidebar-form">
-        <div class="input-group">
-            <input type="text" class="search-form-input form-control" placeholder="<%= __("search.title") %>" />
-            <span class="input-group-btn">
-                <button type="submit" class="search-form-submit btn btn-flat" onclick="return false;"><i class="fas fa-search"></i></button>
-            </span>
-        </div>
-    </form>
+<div class="searchbar">
+  <form class="searchbar__form">
+    <input
+      type="text"
+      class="searchbar__input"
+      placeholder="<%= __("search.title") %>"
+    />
+    <button type="submit" class="searchbar__submit" onclick="return false;">
+      <i class="fas fa-search"></i>
+    </button>
+  </form>
 </div>
