--- a/themes/yeldirium/layout/page.ejs
+++ b/themes/yeldirium/layout/page.ejs
@@ -1,4 +1,4 @@
-<main id="main" role="main" class="page">
+<main class="main main--page" role="main">
   <article id="page">
     <h1><%= page.title %></h1>
     <%- page.content %>
