--- a/themes/yeldirium/layout/post.ejs
+++ b/themes/yeldirium/layout/post.ejs
@@ -1,4 +1,4 @@
-<main id="main" role="main" class="post">
+<main class="main main--post" role="main">
   <article id="post">
     <h1><%= page.title %></h1>
     <%- page.content %>
