--- a/themes/yeldirium/source-raw/scss/index.scss
+++ b/themes/yeldirium/source-raw/scss/index.scss
@@ -1,6 +1,11 @@
+@import './variables';
+
 @import './insight';
 @import './shared/hamburger';
 @import './shared/fonts';
+@import './shared/hidden-text';
+@import './shared/images';
+@import './shared/text';
 
 @import './mobile';
 @import './tablet';
