--- a/themes/yeldirium/layout/_partial/footer.ejs
+++ b/themes/yeldirium/layout/_partial/footer.ejs
@@ -1,9 +1,21 @@
-<footer id="footer">
+<footer class="footer">
 	<%- partial('_partial/social') %>
     <div class="copyright">
         &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
         <div class="publishby">
         	<%= __('copyright.theme_by') %> <a href="<%= theme.profile.social.links.github %>" target="_blank"><%= theme.profile.social.names.github %></a> <%= __('copyright.based_on') %> <a href="https://github.com/cofess/hexo-theme-pure" target="_blank">pure</a>.
         </div>
+    </div>
+    <div class="footer__links">
+      <% for (var i in theme.footer){ %>
+        <%
+          const item = theme.footer[i];
+          if (item.enabled) {
+        %>
+          <a href="<%- item.path %>" class="footer__link">
+            <%= __('footer.' + item.name) %>
+          </a>
+        <% } %>
+      <% } %>
     </div>
 </footer>
