--- a/themes/yeldirium/layout/_partial/recentPosts.ejs
+++ b/themes/yeldirium/layout/_partial/recentPosts.ejs
@@ -1,8 +1,8 @@
 
-<% if (page.posts.length > 0) { %>
+<% if (site.posts.length > 0) { %>
   <div id="recent-posts">
     <h1>Recent Posts</h1>
-    <% page.posts.sort('date', -1).limit(10).each(post => { %>
+    <% site.posts.sort('date', -1).limit(10).each(post => { %>
       <div class="recent-post-item">
         <a href="<%= url_for(post.path) %>"><%= post.title %></a>
         <time datetime="<%= post.date.toJSON() %>">
