--- a/themes/yeldirium/layout/_widget/recentPosts.ejs
+++ b/themes/yeldirium/layout/_widget/recentPosts.ejs
@@ -2,22 +2,22 @@
   <div class="widget">
     <h3 class="widget-title"><%= __('sidebar.widget.recentPosts') %></h3>
     <div class="widget-body">
-      <ul class="recent-post-list">
+      <ul class="widget__recent-posts">
         <% site.posts.sort('date', -1).limit(5).each(function(post){ %>
           <li>
-            <div class="item-inner">
-              <p class="item-category">
-                <%- list_categories(post.categories, {show_count: false, depth:2, class: 'category', style: 'none', separator: '<i class="fas fa-angle-right"></i>'}) %>
+            <div class="widget__recent-posts__item-inner">
+              <p class="widget__recent-posts__item-category">
+                <%- list_categories(post.categories, {show_count: false, depth:2, style: 'none', separator: '<i class="fas fa-angle-right"></i>'}) %>
               </p>
-              <p class="item-title">
-                <a href="<%- url_for(post.link ? post.link : post.path) %>" class="title"><%= post.title || '(no title)' %></a>
+              <p class="widget__recent-posts__item-title">
+                <a href="<%- url_for(post.link ? post.link : post.path) %>"><%= post.title || '(no title)' %></a>
               </p>
-              <p class="item-date">
+              <p class="widget__recent-posts__item-date">
                 <time datetime="<%= date_xml(post.date) %>" itemprop="datePublished"><%= date(post.date) %></time>
               </p>
             </div>
           </li>
-          <% }) %>
+        <% }) %>
       </ul>
     </div>
   </div>
