--- a/themes/yeldirium/source-raw/scss/_variables.scss
+++ b/themes/yeldirium/source-raw/scss/_variables.scss
@@ -2,21 +2,25 @@ $background: #fff;
 $sidebar-background: #fbfbfb;
 $sidebar-border: #f6f6f6;
 
+$color-primary: #090;
+
 $font-color-main: #444;
 $font-color-light: #777;
-$font-color-link-hover: #090;
+$font-color-link-hover: $color-primary;
 $font-color-link-visited: #060;
 
 // mobile
 $sm-body-padding-x: 2rem;
 
 // tablet
+$md-min-width: 45rem;
 $md-body-padding-x: 2rem;
 $md-navigation-width: 3rem;
 $md-sidebar-width: 15rem;
 $md-footer-height: 8rem;
 
 // desktop
+$xl-min-width: 60rem;
 $xl-body-padding-x: 2rem;
 $xl-sidebar-width: 15rem;
 $xl-footer-height: 8rem;
