feat: Style remaining widgets.

--- a/themes/yeldirium/layout/_widget/archive.ejs
+++ b/themes/yeldirium/layout/_widget/archive.ejs
@@ -3,8 +3,9 @@
     <h3 class="widget-title"><%= __('sidebar.widget.archive') %></h3>
     <div class="widget-body">
       <%- list_archives({
-      	show_count: theme.site.archive.showCount,
-      	type: theme.site.archive.type
+        show_count: theme.site.archive.showCount,
+        type: theme.site.archive.type,
+        class: 'widget__archive'
       }) %>
     </div>
   </div>
