--- a/themes/yeldirium/layout/_partial/recentPosts.ejs
+++ b/themes/yeldirium/layout/_partial/recentPosts.ejs
@@ -2,13 +2,27 @@
 <% if (site.posts.length > 0) { %>
   <div id="recent-posts">
     <h1>Recent Posts</h1>
-    <% site.posts.sort('date', -1).limit(10).each(post => { %>
-      <div class="recent-post-item">
-        <a href="<%= url_for(post.path) %>"><%= post.title %></a>
-        <time datetime="<%= post.date.toJSON() %>">
-          <%= date(post.date)%>
-        </time>
-      </div>
-    <% }); %>
+    <div class="recent-posts__list">
+      <% site.posts.sort('date', -1).limit(10).each(post => { %>
+        <div class="recent-posts__item">
+          <div class="recent-posts__header">
+            <time class="recent-posts__date" datetime="<%= post.date.toJSON() %>">
+              <%= date(post.date)%>
+            </time>
+            <% if (post.categories.length > 0) { %>
+              <span class="recent-posts__category">
+                | <%- list_categories(post.categories, { show_count: false, depth: 2, style: 'none', separator: ' &gt; ' }) %>
+              </span>
+            <% } %>
+          </div>
+          <a class="recent-posts__title" href="<%= url_for(post.path) %>"><%= post.title %></a>
+          <div class="recent-posts__tags">
+            <% post.tags.each(tag => { %>
+              <span class="recent-posts__tag"><%= tag.name %></span>
+            <% }); %>
+          </div>
+        </div>
+      <% }); %>
+    </div>
   </div>
 <% } %>
