--- a/themes/yeldirium/layout/post.ejs
+++ b/themes/yeldirium/layout/post.ejs
@@ -1,10 +1,3 @@
 <main class="main main--post" role="main">
-  <article id="post">
-    <h1><%= page.title %></h1>
-    <%- page.content %>
-  </article>
-
-  <div id="paginator">
-    <%- paginator()%>
-  </div>
+  <%- partial('_partial/post/post', { post: page, index: false }) %>
 </main>
