feat: Remove placeholder content; Fill contact information.

--- a/themes/yeldirium/layout/home.ejs
+++ b/themes/yeldirium/layout/home.ejs
@@ -1,10 +1,5 @@
 <main class="main main--home" role="main">
   <div class="home-jumbo">
-    <div class="home-jumbo__content">
-      <h2>Hi there!</h2>
-      <p>My name is Hannes Leutloff.</p>
-      <p>I develop applications, services, systems.</p>
-      <p>I also sometimes write stuff.</p>
-    </div>
+    <%- page.content %>
   </div>
 </main>
