--- a/themes/yeldirium/source-raw/scss/component/_hidden-text.scss
+++ b/themes/yeldirium/source-raw/scss/component/_hidden-text.scss
@@ -17,3 +17,7 @@
 #e809jfun1i3:after {
   content: "E-Mail: hannes.leutloff@yeldirium.de";
 }
+
+#j8901fui4:after {
+  content: "hannes.leutloff@yeldirium.de";
+}
