feat: Add docker setup.

--- a/themes/yeldirium/layout/_partial/footer.ejs
+++ b/themes/yeldirium/layout/_partial/footer.ejs
@@ -3,7 +3,7 @@
     <div class="copyright">
         &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
         <div class="publishby">
-        	<%= __('copyright.theme_by') %> <a href="<%= theme.profile.social.links.github %>" target="_blank"><%= theme.profile.social.names.github %></a> <%= __('copyright.based_on') %> <a href="https://github.com/cofess/hexo-theme-pure" target="_blank">pure</a>.
+        	<%= __('copyright.theme_by') %> <a href="<%= theme.profile.social.links.github %>" target="_blank" rel="noopener"><%= theme.profile.social.names.github %></a> <%= __('copyright.based_on') %> <a href="https://github.com/cofess/hexo-theme-pure" target="_blank" rel="noopener">pure</a>.
         </div>
     </div>
     <div class="footer__links">
