--- a/themes/yeldirium/layout/_partial/social.ejs
+++ b/themes/yeldirium/layout/_partial/social.ejs
@@ -7,6 +7,7 @@
             class="navigation-social__item__link"
             target="_blank"
             title="<%= titlecase(i) %>"
+            rel="noopener"
             <%= tooltipClass %>
         >
           <i class="fab fa-<%= i %>"></i>
