--- a/themes/yeldirium/layout/_partial/head.ejs
+++ b/themes/yeldirium/layout/_partial/head.ejs
@@ -27,8 +27,8 @@
     twitter_id: theme.twitter
   }) %>
 
-  <% if (theme.rss){ %>
-    <link rel="alternate" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml">
+  <% if (config.feed.path){ %>
+    <link rel="alternate" href="<%- config.feed.path %>" title="<%= config.title %>" type="application/atom+xml">
   <% } %>
   <% if (theme.site.favicon){ %>
     <link rel="icon" href="<%- theme.site.favicon %>" type="image/x-icon">
