feat: Add feed to social links.

--- a/themes/yeldirium/layout/_partial/social.ejs
+++ b/themes/yeldirium/layout/_partial/social.ejs
@@ -14,5 +14,15 @@
         </a>
       </li>
     <% } %>
+    <li class="navigation-social__item">
+      <a  href="/atom.xml"
+          class="navigation-social__item__link"
+          target="_blank"
+          title="Feed"
+          <%= tooltipClass %>
+      >
+        <i class="fas fa-rss-square"></i>
+      </a>
+    </li>
   </ul>
 <% } %>
