--- a/themes/yeldirium/source-raw/scss/index.scss
+++ b/themes/yeldirium/source-raw/scss/index.scss
@@ -25,3 +25,4 @@
 @import './component/post';
 @import './component/pagination';
 @import './component/skills-list';
+@import './component/work-education-item';
