--- a/themes/yeldirium/source-raw/scss/component/_post-preview-list.scss
+++ b/themes/yeldirium/source-raw/scss/component/_post-preview-list.scss
@@ -1,16 +1,14 @@
-.recent-posts {
-  &__item {
-    display: grid;
-    grid-template-areas:
-      "header"
-      "title"
-      "tags";
+.post-preview {
+  display: grid;
+  grid-template-areas:
+    "header"
+    "title"
+    "tags";
 
-    margin-bottom: 1rem;
-    padding: 0.5rem 1rem 0.75rem 1rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem 1rem 0.75rem 1rem;
 
-    border: 1px solid $color-gray-very-light;
-  }
+  border: 1px solid $color-gray-very-light;
 
   &__header {
     grid-area: header;
