--- a/themes/yeldirium/source-raw/scss/index.scss
+++ b/themes/yeldirium/source-raw/scss/index.scss
@@ -18,7 +18,7 @@
 
 @import './component/navigation-social';
 @import './component/home-jumbo';
-@import './component/recent-posts';
+@import './component/post-preview-list';
 @import './component/sidebar-widgets';
 @import './component/hidden-text';
 @import './component/hamburger';
