--- a/themes/yeldirium/layout/_partial/post/preview.ejs
+++ b/themes/yeldirium/layout/_partial/post/preview.ejs
@@ -1,18 +1,18 @@
-<div class="recent-posts__item">
-  <div class="recent-posts__header">
-    <time class="recent-posts__date" datetime="<%= post.date.toJSON() %>">
+<div class="post-preview">
+  <div class="post-preview__header">
+    <time class="post-preview__date" datetime="<%= post.date.toJSON() %>">
       <%= date(post.date)%>
     </time>
     <% if (post.categories.length > 0) { %>
-      <span class="recent-posts__category">
+      <span class="post-preview__category">
         | <%- list_categories(post.categories, { show_count: false, depth: 2, style: 'none', separator: ' &gt; ' }) %>
       </span>
     <% } %>
   </div>
-  <a class="recent-posts__title" href="<%= url_for(post.path) %>"><%= post.title %></a>
-  <div class="recent-posts__tags">
+  <a class="post-preview__title" href="<%= url_for(post.path) %>"><%= post.title %></a>
+  <div class="post-preview__tags">
     <% post.tags.each(tag => { %>
-      <span class="recent-posts__tag"><%= tag.name %></span>
+      <span class="post-preview__tag"><%= tag.name %></span>
     <% }); %>
   </div>
 </div>
