feat: Split scss more; Fix navigation icon width on mobile.

--- a/themes/yeldirium/source-raw/scss/index.scss
+++ b/themes/yeldirium/source-raw/scss/index.scss
@@ -16,6 +16,9 @@
 @import './generic/text';
 @import './generic/blocks';
 
+@import './component/navigation';
+@import './component/profile';
+@import './component/searchbar';
 @import './component/navigation-social';
 @import './component/home-jumbo';
 @import './component/post-preview-list';
