--- a/themes/yeldirium/layout/_partial/head.ejs
+++ b/themes/yeldirium/layout/_partial/head.ejs
@@ -33,4 +33,5 @@
   <% if (theme.site.favicon){ %>
     <link rel="icon" href="<%- theme.site.favicon %>" type="image/x-icon">
   <% } %>
+  <%- css('main') %>
 </head>
