feat: Animate progress bars and improve layout.

--- a/themes/yeldirium/source-raw/scss/index.scss
+++ b/themes/yeldirium/source-raw/scss/index.scss
@@ -29,3 +29,4 @@
 @import './component/pagination';
 @import './component/skills-list';
 @import './component/work-education-item';
+@import './component/progress-bar';
