feat: Improve about layout column width.

--- a/themes/yeldirium/source-raw/scss/index.scss
+++ b/themes/yeldirium/source-raw/scss/index.scss
@@ -11,6 +11,9 @@
 @import './layout/footer';
 @import './layout/about';
 
+// Hexo layout specific
+@import './layout/home';
+
 @import './generic/fonts';
 @import './generic/images';
 @import './generic/text';
