feat: remove two fontawsome fonts.

--- a/themes/yeldirium/layout/_partial/post/date.ejs
+++ b/themes/yeldirium/layout/_partial/post/date.ejs
@@ -1,5 +1,5 @@
 <span class="post__date">
-	<i class="far fa-calendar-check"></i>
+	<i class="fas fa-calendar-check"></i>
 	<a href="<%- url_for(post.path) %>" class="post__date-link">
 		<time datetime="<%= date_xml(post.date) %>"><%= date(post.date) %></time>
 	</a>
