feat: Improve accessibility.

--- a/themes/yeldirium/layout/_partial/search/searchBar.ejs
+++ b/themes/yeldirium/layout/_partial/search/searchBar.ejs
@@ -5,9 +5,15 @@
   <input
     type="text"
     class="searchbar__input"
+    aria-label="<%= __("search.title") %>"
     placeholder="<%= __("search.title") %>"
   />
-  <button type="submit" class="searchbar__submit" onclick="return false;">
+  <button
+    type="submit"
+    class="searchbar__submit"
+    aria-label="<%= __("search.submit") %>"
+    onclick="return false;"
+  >
     <i class="fas fa-search"></i>
   </button>
 </form>
