feat: Style inline code much better.

--- a/themes/yeldirium/source-raw/scss/_variables.scss
+++ b/themes/yeldirium/source-raw/scss/_variables.scss
@@ -13,6 +13,7 @@ $font-color-main: $color-gray-main;
 $font-color-light: $color-gray-light;
 $font-color-link-hover: $color-primary;
 $font-color-link-visited: $color-primary-dark;
+$font-background-code: #ddd;
 
 // mobile
 $sm-body-padding-x: 2rem;
