--- a/themes/yeldirium/source-raw/scss/generic/_text.scss
+++ b/themes/yeldirium/source-raw/scss/generic/_text.scss
@@ -24,3 +24,11 @@ a {
 .font-light {
   font-weight: 300;
 }
+
+code {
+  padding: 0 2px;
+
+  background-color: $font-background-code;
+
+  font-size: 0.9rem;
+}
