fix: Fix monospace font in code blocks.

--- a/themes/yeldirium/source-raw/scss/generic/_fonts.scss
+++ b/themes/yeldirium/source-raw/scss/generic/_fonts.scss
@@ -18,6 +18,10 @@
   font-weight: bold;
   font-style: italic;
 }
+@font-face {
+  font-family: "Roboto Mono";
+  src: url("../../vendor/fonts/RobotoMono-Regular.ttf");
+}
 
 * {
   font-family: "Roboto", Arial, sans-serif;
