feat: Add mastodon link with rel=me for verification.

--- a/themes/yeldirium/layout/_partial/social.ejs
+++ b/themes/yeldirium/layout/_partial/social.ejs
@@ -8,7 +8,7 @@
             target="_blank"
             title="<%= i %>"
             aria-label="<%= i %>"
-            rel="noopener"
+            rel="me"
             <%= tooltipClass %>
         >
           <i class="fab fa-<%= i %>"></i>
