--- a/themes/yeldirium/layout/_partial/head.ejs
+++ b/themes/yeldirium/layout/_partial/head.ejs
@@ -14,11 +14,15 @@
 
   <%
   var pageTitle = page.title || config.subtitle || '';
+  if (is_home()) pageTitle = 'Blog';
   if (is_archive()) pageTitle = 'Archives';
   if (is_tag()) pageTitle = 'Tag: ' + page.tag;
   if (is_category()) pageTitle = 'Category: ' + page.category;
-  if (is_month()) pageTitle += ': ' + page.month + '/' + page.year;
-  if (is_year()) pageTitle += ': ' + page.year;
+  if (is_month()) {
+    pageTitle += ': ' + page.month + '/' + page.year;
+  } else if (is_year()) {
+    pageTitle += ': ' + page.year;
+  }
   pageTitle += ' [ ' + config.title + ' ]';
   %>
   <title><%= pageTitle %></title>
