feat: Remove roboto font; Vastly reduce package size.

--- a/themes/yeldirium/source-raw/scss/generic/_text.scss
+++ b/themes/yeldirium/source-raw/scss/generic/_text.scss
@@ -36,5 +36,5 @@ code {
 }
 
 code[class*="language-"], pre[class*="language-"], span.token {
-  font-family: "Roboto Mono", monospace !important;
+  font-family: monospace !important;
 }
