--- a/themes/yeldirium/source-raw/scss/generic/_fonts.scss
+++ b/themes/yeldirium/source-raw/scss/generic/_fonts.scss
@@ -1,28 +1,3 @@
-@font-face {
-  font-family: "Roboto";
-  src: url("../../vendor/fonts/Roboto-Regular.ttf");
-}
-@font-face {
-  font-family: "Roboto";
-  src: url("../../vendor/fonts/Roboto-Bold.ttf");
-  font-weight: bold;
-}
-@font-face {
-  font-family: "Roboto";
-  src: url("../../vendor/fonts/Roboto-Italic.ttf");
-  font-style: italic;
-}
-@font-face {
-  font-family: "Roboto";
-  src: url("../../vendor/fonts/Roboto-BoldItalic.ttf");
-  font-weight: bold;
-  font-style: italic;
-}
-@font-face {
-  font-family: "Roboto Mono";
-  src: url("../../vendor/fonts/RobotoMono-Regular.ttf");
-}
-
 * {
-  font-family: "Roboto", Arial, sans-serif;
+  font-family: sans-serif;
 }
