--- a/themes/yeldirium/layout/_partial/head.ejs
+++ b/themes/yeldirium/layout/_partial/head.ejs
@@ -1,16 +1,16 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-  <meta name="renderer" content="webkit">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui" />
+  <meta name="renderer" content="webkit" />
   <meta http-equiv="Cache-Control" content="no-transform" />
   <meta http-equiv="Cache-Control" content="no-siteapp" />
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="format-detection" content="telephone=no,email=no,adress=no">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="format-detection" content="telephone=no,email=no,adress=no" />
   <meta name="theme-color" content="#000000" />
-  <link rel="canonical" href="<%- url %>">
-  <base href="<%= config.url %>">
+  <link rel="canonical" href="<%- url %>" />
+  <base href="<%= config.url %>" />
 
   <%
   var pageTitle = page.title || config.subtitle || '';
@@ -28,10 +28,11 @@
   <title><%= pageTitle %></title>
 
   <% if (config.feed.path){ %>
-    <link rel="alternate" href="<%- config.feed.path %>" title="<%= config.title %>" type="application/atom+xml">
+    <link rel="alternate" href="<%- config.feed.path %>" title="<%= config.title %>" type="application/atom+xml" />
   <% } %>
   <% if (theme.site.favicon){ %>
-    <link rel="icon" href="<%- theme.site.favicon %>" type="image/x-icon">
+    <link rel="icon" href="<%- theme.site.favicon %>" type="image/png" />
+    <link rel="shortcut icon" href="<%- theme.site.favicon %>" />
   <% } %>
   <%- css('main') %>
 </head>
