feat: Change menu button from minus to squeeze.
I like the squeeze more, since it displays an X instead of a -, which
makes it clearer, what it does.

--- a/themes/yeldirium/layout/_partial/navigation/toggleButton.ejs
+++ b/themes/yeldirium/layout/_partial/navigation/toggleButton.ejs
@@ -1,6 +1,6 @@
 <button
   id="navigation-toggle-button"
-  class="hamburger hamburger--minus"
+  class="hamburger hamburger--squeeze"
   type="button"
   aria-label="<%= __('navigation.toggle') %>"
   aria-controls="navigation"
