feat: Fix tab indexes and content order in markup.

--- a/themes/yeldirium/layout/_partial/header.ejs
+++ b/themes/yeldirium/layout/_partial/header.ejs
@@ -14,7 +14,7 @@
           if (item.enabled) {
         %>
           <li class="navigation__item">
-            <a href="<%- url_for(item.path) %>" class="navigation__item__link">
+            <a href="<%- url_for(item.path) %>" tabindex="0" class="navigation__item__link">
               <% if(theme.site.enableMenuIcons) { %>
                 <i class="<%= item.icon %>"></i>
               <% } %>
