--- a/themes/yeldirium/layout/_partial/search/searchBar.ejs
+++ b/themes/yeldirium/layout/_partial/search/searchBar.ejs
@@ -7,12 +7,14 @@
     class="searchbar__input"
     aria-label="<%= __("search.title") %>"
     placeholder="<%= __("search.title") %>"
+    tabindex="-1"
   />
   <button
     type="submit"
     class="searchbar__submit"
     aria-label="<%= __("search.submit") %>"
     onclick="return false;"
+    tabindex="-1"
   >
     <i class="fas fa-search"></i>
   </button>
